--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -991,43 +991,44 @@ Das vorgestellte VIPER-Programm. Dies ist zu unterscheiden von Prolog-Programmen
 Prolog-Quelltext in Form von Dateien auf einem Speichermedium. Dies ist zu unterscheiden von dem Programm im Sinne des VIPER-Programms.
 
 \subsection{Prolog-interne Begriffe}
+\textbf{Abfrage}:
+Ziel, für das alle möglichen Lösungen gefunden werden sollen. Die Lösung kann eine Menge an Belegungen für Variablen oder eine Ja-Nein-Antwort sein.
+
+\textbf{Arithmetik}:
+Berechnung mathematischer Operationen (bspw. Summen, Differenzen, Vergleiche etc.).
+
 \textbf{Fakt}:
-Aussage, welche als wahr angenommen wird.
-
-Im Kontext von Prolog: eine Regel ohne Teilziele.
-
-\textbf{Regel}:
-Vorgeschriebene Folgerungen. Regeln können bspw. festsetzen, dass aus dem Fakt, dass jemand ein Elternteil ist, folgt, dass dieser Elternteil entweder Mutter oder Vater sein muss.
-
-\textbf{Identifier}:
-Wort, beginnend mit einem Kleinbuchstaben und fortsetzend mit Groß- und Kleinbuchstaben sowie Zahlen.
-
-\textbf{Variable}:
-Platzhalter. Erlaubt das allgemeine Beschreiben von Regeln. Können für einen beliebigen Term stehen.
+Aussage, welche als wahr angenommen wird. Im Kontext von Prolog: eine Regel ohne Teilziele.
 
 \textbf{Funktor}:
 Sammelbegriff für einen einzelnen Identifier und Identifier in Kombination mit einer beliebigen Anzahl Termen, welche in Klammern hinter dem Identifier stehen.
 
-\textbf{Ziel}:
-Lösbarer Teil einer Regel, welcher einem Funktor, einem Unifikationsziel, Arithmetik oder dem \enquote{Cut}-Operator entsprechen kann.
-
-\textbf{Term}:
-Sammelbegriff für Funktoren, Variablen oder Zahlen.
-
-\textbf{Standardbibliothek}:
-Voreingestellte Regeln, welche automatisch bei der Verarbeitung durch den Parser angefügt werden können.
-
-\textbf{Abfrage}:
-Ziel, für das alle möglichen Lösungen gefunden werden sollen. Die Lösung kann eine Menge an Belegungen für Variablen oder eine Ja-Nein-Antwort sein.
-
-\textbf{Parser}:
-Umwandlungsmechanismus für Prolog-Programme, der diese in ein für die Weiterverarbeitung geeignetes Format bringt und auf syntaktische Fehler prüft.
+\textbf{Identifier}:
+Wort, beginnend mit einem Kleinbuchstaben und fortsetzend mit Groß- und Kleinbuchstaben sowie Zahlen.
 
 \textbf{Interpreter}:
 Ausführungsmechanismus für Abfragen. Nachdem sowohl das zugrunde liegende Prolog-Programm als auch die Abfrage durch den Parser verarbeitet wurden, findet eine schrittweise Interpretation der genannten Abfrage statt.
 
+\textbf{Parser}:
+Umwandlungsmechanismus für Prolog-Programme, der diese in ein für die Weiterverarbeitung geeignetes Format bringt und auf syntaktische Fehler prüft.
+
+\textbf{Regel}:
+Vorgeschriebene Folgerungen. Regeln können bspw. festsetzen, dass aus dem Fakt, dass jemand ein Elternteil ist, folgt, dass dieser Elternteil entweder Mutter oder Vater sein muss.
+
 \textbf{Schritt}:
 Nächste Operation, die zur Interpretation einer Abfrage nötig ist.
+
+\textbf{Standardbibliothek}:
+Voreingestellte Regeln, welche automatisch bei der Verarbeitung durch den Parser angefügt werden können.
+
+\textbf{Term}:
+Sammelbegriff für Funktoren, Variablen oder Zahlen.
+
+\textbf{Variable}:
+Platzhalter. Erlaubt das allgemeine Beschreiben von Regeln. Können für einen beliebigen Term stehen.
+
+\textbf{Ziel}:
+Lösbarer Teil einer Regel, welcher einem Funktor, einem Unifikationsziel, Arithmetik oder dem \enquote{Cut}-Operator entsprechen kann.
 
 \textbf{Zustand}:
 Ergebnis der bisher durchgeführten Schritte.
@@ -1035,54 +1036,51 @@ Ergebnis der bisher durchgeführten Schritte.
 \textbf{Zustandsunterschied}:
 Schritte zwischen zwei Zuständen.
 
-\textbf{Arithmetik}:
-Berechnung mathematischer Operationen (bspw. Summen, Differenzen, Vergleiche etc.).
-
 \subsection{Begriffe der Bedienoberfläche}
-\textbf{Öffnen}:
-Lesen eines ausgewählten Prolog-Programms von einem verbundenen Speichermedium in das Programm. Dies entspricht der Übertragung des Textes aus der gewählten Datei in den Editor.
-
-\textbf{Speichern}:
-Schreiben einer Prolog-Programmdatei in ein Zielverzeichnis auf einem verbundenen Speichermedium. Es werden ausschließlich Prolog-Programme gespeichert, andere Schreibvorgänge auf Speichermedien fallen unter den Begriff Export.
-
-\textbf{Export}:
-Schreiben von Bild-Dateien oder LaTeX-Quellcode in ein Zielverzeichnis auf einem verbundenen Speichermedium. Das Schreiben von Prolog-Programmen auf ein Speichermedium wird nicht als Export, sondern als Speichern bezeichnet.
+\textbf{Dialog}:
+Fenster zur Meldung einer Nachricht (Warnungs- oder Fehler-Dialog) oder Anfrage (bspw. Bestätigungs-Dialog).
 
 \textbf{Editor}:
 Element der graphischen Oberfläche, welches Eingabe und Bearbeitung von angezeigtem Text ermöglicht.
 
-\textbf{Konsole}:
-Element der graphischen Oberfläche. Die Konsole ist nur lesbar und dient der Ausgabe von Ergebnissen einer Abfrage sowie anderen Meldungen. 
-
 \textbf{Eingabefeld}:
 Element der graphischen Oberfläche. Das Eingabefeld dient zur Eingabe von Abfragen. Es ist nur dann aktiviert, wenn ein gültiges Prolog-Programm eingegeben und geparst wurde.
+
+\textbf{Export}:
+Schreiben von Bild-Dateien oder LaTeX-Quellcode in ein Zielverzeichnis auf einem verbundenen Speichermedium. Das Schreiben von Prolog-Programmen auf ein Speichermedium wird nicht als Export, sondern als Speichern bezeichnet.
+
+\textbf{Formatierung}:
+Vorgegebener Stil bzgl. der Setzung von Leerzeichen und Umbrüchen. Zu unterscheiden von Syntax, da Formatierung keinen Einfluss auf die Validität des Programms hat.
 
 \textbf{Graph}:
 Struktur bestehend aus Knoten und Kanten.
 
-\textbf{Visualisierung}:
-Navigierbarer Graph, welcher den Ablauf der Interpretation einer Abfrage im Kontext eines gegebenen Prolog-Programms aufzeigt.
-
-\textbf{Rückschreiten / Backtracking}:
-Zurücksetzen des aktuellen Interpretationsschritts auf den vorigen Schritt.
-
-\textbf{Zoom}:
-Vergrößerung oder Verkleinerung eines Bildausschnitts.
-
-\textbf{Syntax-Highlighting}:
-Visuelle Markierung verschiedener Elemente eines Programm-Textes durch Schrifteffekte und -farben (bspw. Einfärbung von zusammengehörigen Klammern).
-
 \textbf{GUI / GUI-Element}:
 Das GUI entspricht der graphischen Benutzeroberfläche (graphical user interface). Das GUI ist zusammengesetzt aus diversen GUI-Elementen innerhalb eines Fensters (bspw. dem Editor).
+
+\textbf{Konsole}:
+Element der graphischen Oberfläche. Die Konsole ist nur lesbar und dient der Ausgabe von Ergebnissen einer Abfrage sowie anderen Meldungen. 
 
 \textbf{Menüleiste}:
 Element der graphischen Oberfläche. Bietet über Text-Menüs Zugriff auf Funktionen wie Speichern und Öffnen.
 
-\textbf{Dialog}:
-Fenster zur Meldung einer Nachricht (Warnungs- oder Fehler-Dialog) oder Anfrage (bspw. Bestätigungs-Dialog).
+\textbf{Öffnen}:
+Lesen eines ausgewählten Prolog-Programms von einem verbundenen Speichermedium in das Programm. Dies entspricht der Übertragung des Textes aus der gewählten Datei in den Editor.
 
-\textbf{Formatierung}:
-Vorgegebener Stil bzgl. der Setzung von Leerzeichen und Umbrüchen. Zu unterscheiden von Syntax, da Formatierung keinen Einfluss auf die Validität des Programms hat.
+\textbf{Rückschreiten / Backtracking}:
+Zurücksetzen des aktuellen Interpretationsschritts auf den vorigen Schritt.
+
+\textbf{Speichern}:
+Schreiben einer Prolog-Programmdatei in ein Zielverzeichnis auf einem verbundenen Speichermedium. Es werden ausschließlich Prolog-Programme gespeichert, andere Schreibvorgänge auf Speichermedien fallen unter den Begriff Export.
+
+\textbf{Syntax-Highlighting}:
+Visuelle Markierung verschiedener Elemente eines Programm-Textes durch Schrifteffekte und -farben (bspw. Einfärbung von zusammengehörigen Klammern).
+
+\textbf{Visualisierung}:
+Navigierbarer Graph, welcher den Ablauf der Interpretation einer Abfrage im Kontext eines gegebenen Prolog-Programms aufzeigt.
+
+\textbf{Zoom}:
+Vergrößerung oder Verkleinerung eines Bildausschnitts.
 
 \newpage
 \section{Anhang}
