spec: Add unification, fix backtracking in glossary

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -1024,6 +1024,9 @@ Voreingestellte Regeln, welche automatisch bei der Verarbeitung durch den Parser
 \textbf{Term}:
 Sammelbegriff für Funktoren, Variablen oder Zahlen.
 
+\textbf{Unifikation}
+Ersetzen von Variablen durch eine Belegung, die alle Term-Gleichungen erfüllt.
+
 \textbf{Variable}:
 Platzhalter. Erlaubt das allgemeine Beschreiben von Regeln. Können für einen beliebigen Term stehen.
 
@@ -1068,7 +1071,7 @@ Element der graphischen Oberfläche. Bietet über Text-Menüs Zugriff auf Funkti
 Lesen eines ausgewählten Prolog-Programms von einem verbundenen Speichermedium in das Programm. Dies entspricht der Übertragung des Textes aus der gewählten Datei in den Editor.
 
 \textbf{Rückschreiten / Backtracking}:
-Zurücksetzen des aktuellen Interpretationsschritts auf den vorigen Schritt.
+Aufheben der letzten Wahl bei der Suche nach einer passenden Variablenbelegung.
 
 \textbf{Speichern}:
 Schreiben einer Prolog-Programmdatei in ein Zielverzeichnis auf einem verbundenen Speichermedium. Es werden ausschließlich Prolog-Programme gespeichert, andere Schreibvorgänge auf Speichermedien fallen unter den Begriff Export.
