spec: Change definition of unification

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -1025,7 +1025,7 @@ Voreingestellte Regeln, welche automatisch bei der Verarbeitung durch den Parser
 Sammelbegriff für Funktoren, Variablen oder Zahlen.
 
 \textbf{Unifikation}
-Ersetzen von Variablen durch eine Belegung, die alle Term-Gleichungen erfüllt.
+Zwei Terme sind genau dann unifizierbar, wenn sie gleich sind oder Variablen enthalten, die so belegt werden können dass die Terme gleich sind.
 
 \textbf{Variable}:
 Platzhalter. Erlaubt das allgemeine Beschreiben von Regeln. Können für einen beliebigen Term stehen.
