spec: Add code blocks for Prolog output

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -598,14 +598,14 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Eine leeres Prolog-Programm wird im Editor angelegt.}
 
 \teststep{Der Nutzer hat nun ein leeres Editor-Fenster vor sich.}
-{Der Nutzer gibt das unformatierte simpsons.pl-Programm wie im Anhang beschrieben ein.}
+{Der Nutzer gibt das unformatierte \texttt{simpsons.pl}-Programm wie im Anhang beschrieben ein.}
 {Der Editor ändert den Inhalt des Prolog-Programms entsprechend der Eingabe.}
 
-\teststep{Das unformatierte simpsons.pl-Programm ist im Editor eingetragen.}
+\teststep{Das unformatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen.}
 {Der Nutzer betätigt die Formatieren-Schaltfläche.}
-{Das simpsons.pl-Programm wird formatiert und entspricht nun dem formatierten simpsons.pl-Programm im Anhang.}
+{Das \texttt{simpsons.pl}-Programm wird formatiert und entspricht nun dem formatierten \texttt{simpsons.pl}-Programm im Anhang.}
 
-\teststep{Das formatierte simpsons.pl-Programm ist im Editor eingetragen.}
+\teststep{Das formatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen.}
 {Der Nutzer wählt über die Menü-Leiste die Speichern-Funktion aus.}
 {Ein Speichern-Dialog öffnet sich.}
 
@@ -613,15 +613,15 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Der Nutzer betätigt die Speichern-Schaltfläche.}
 {Das Prolog-Programm wird im gewählten Verzeichnis gespeichert.}
 
-\teststep{Das formatierte simpsons.pl-Programm ist im Editor eingetragen und gespeichert.}
+\teststep{Das formatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen und gespeichert.}
 {Der Nutzer betätigt die Parser-Schaltfläche.}
 {Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Der Eingabebereich der Konsole wird freigegeben und fokussiert.}
 
-\teststep{Das formatierte simpsons.pl-Programm ist im Editor eingetragen, gespeichert und durch den Parser verarbeitet worden.}
+\teststep{Das formatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen, gespeichert und durch den Parser verarbeitet worden.}
 {Der Nutzer fokussiert durch einen Mausklick das Editor-Fenster und fügt vor die erste Zeile das Wort \enquote{Fehler} gefolgt von einem Umbruch ein.}
 {Der Eingabebereich der Konsole wird gesperrt.}
 
-\teststep{Das unformatierte simpsons.pl-Programm ist im Editor eingetragen und gespeichert worden. Das Wort \enquote{Fehler} wurde vor die ursprüngliche erste Zeile eingetragen.}
+\teststep{Das unformatierte \texttt{simpsons.pl}-Programm ist im Editor eingetragen und gespeichert worden. Das Wort \enquote{Fehler} wurde vor die ursprüngliche erste Zeile eingetragen.}
 {Der Nutzer betätigt die Parser-Schaltfläche.}
 {Der Eingabebereich der Konsole bleibt weiterhin gesperrt. Der Parser gibt über den Ausgabebreich der Konsole eine Syntax-Fehlermeldung aus.}
 
@@ -638,21 +638,21 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Der Nutzer wählt über die Menü-Leiste die Öffnen-Funktion aus.}
 {Ein Öffnen-Dialog öffnet sich.}
 
-\teststep{Der Nutzer hat ein Prolog-Programm ausgewählt, welches das formatierte simpsons.pl-Programm aus dem Anhang enthält.}
+\teststep{Der Nutzer hat ein Prolog-Programm ausgewählt, welches das formatierte \texttt{simpsons.pl}-Programm aus dem Anhang enthält.}
 {Der Nutzer betätigt die Öffnen-Schaltfläche.}
-{Der Editor enthält nun die formatierte simpsons.pl-Programmdatei analog zum Anhang.}
+{Der Editor enthält nun die formatierte \texttt{simpsons.pl}-Programmdatei analog zum Anhang.}
 
-\teststep{Der Editor enthält die formatierte simpsons.pl-Programmdatei analog zum Anhang.}
+\teststep{Der Editor enthält die formatierte \texttt{simpsons.pl}-Programmdatei analog zum Anhang.}
 {Der Nutzer betätigt die Parser-Schaltfläche.}
 {Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Der Eingabebereich der Konsole wird freigegeben und fokussiert.}
 
 \teststep{Das Prolog-Programm wurde erfolgreich geparst. Es wurden keine Fehlermeldungen ausgegeben.}
-{Der Nutzer gibt in der Eingabezeile der Konsole \enquote{mother(marge, lisa).} ein und bestätigt mit der Eingabe-Taste.}
+{Der Nutzer gibt in der Eingabezeile der Konsole \texttt{mother(marge, lisa).} ein und bestätigt mit der Eingabe-Taste.}
 {Der Parser verarbeitet die Abfrage fehlerfrei. Die Interpretation wird gestartet und eine Visualisierung angezeigt.}
 
 \teststep{Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
 {Der Nutzer betätigt die Schritt-Schaltfläche.}
-{Eine Lösung wurde gefunden. Es wird \enquote{yes.} ausgegeben.}
+{Eine Lösung wurde gefunden. Es wird \texttt{yes.} ausgegeben.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -665,21 +665,21 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 \tests{fnc:continue}
 \tests{fnc:cancel}
 
-\teststep{Der Nutzer hat das Programm nach dem Speichern des simpsons.pl-Programms im Anhang neu gestartet.}
-{Der Nutzer wählt das simpsons.pl-Programm über die Menüleiste unter \enquote{Kürzlich geöffnete Dateien} aus.}
-{Das simpsons.pl-Programm wird im Editor geöffnet.}
+\teststep{Der Nutzer hat das Programm nach dem Speichern des \texttt{simpsons.pl}-Programms im Anhang neu gestartet.}
+{Der Nutzer wählt das \texttt{simpsons.pl}-Programm über die Menüleiste unter \enquote{Kürzlich geöffnete Dateien} aus.}
+{Das \texttt{simpsons.pl}-Programm wird im Editor geöffnet.}
 
-\teststep{Der Editor enthält die formatierte simpsons.pl-Programmdatei analog zum Anhang.}
+\teststep{Der Editor enthält die formatierte \texttt{simpsons.pl}-Programmdatei analog zum Anhang.}
 {Der Nutzer betätigt die Parser-Schaltfläche.}
 {Das Prolog-Programm wird erfolgreich geparst. Es werden keine Fehlermeldungen ausgegeben. Der Eingabebereich der Konsole wird freigegeben und fokussiert.}
 
 \teststep{Das Prolog-Programm wurde erfolgreich geparst. Es wurden keine Fehlermeldungen ausgegeben.}
-{Der Nutzer gibt in der Eingabezeile der Konsole \enquote{mother(X, lisa).} ein und bestätigt mit der Eingabe-Taste.}
+{Der Nutzer gibt in der Eingabezeile der Konsole \texttt{mother(X, lisa).} ein und bestätigt mit der Eingabe-Taste.}
 {Der Parser verarbeitet die Abfrage fehlerfrei. Die Interpretation wird gestartet und eine Visualisierung angezeigt.}
 
 \teststep{Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
 {Der Nutzer betätigt die Fortführen-Schaltfläche.}
-{Die Interpretation wird bis zur Findung einer Lösung fortgeführt. Es wird \enquote{X = marge} ausgegeben. Der Graph entspricht nun dem Graphen bei der Findung der ersten Lösung.}
+{Die Interpretation wird bis zur Findung einer Lösung fortgeführt. Es wird \texttt{X = marge} ausgegeben. Der Graph entspricht nun dem Graphen bei der Findung der ersten Lösung.}
 
 \teststep{Der Interpreter hat eine erste Lösung gefunden. Der Graph ist aktualisiert worden.}
 {Der Nutzer betätigt die Fortführen-Schaltfläche erneut.}
@@ -701,19 +701,19 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 \tests{fnc:imageexport}
 \tests{fnc:latexexport}
 
-\teststep{Der Nutzer hat das formatierte simpsons.pl-Programm aus dem Anhang im Editor eingetragen, durch den Parser verarbeiten lassen und die Abfrage \enquote{mother(X, lisa).} gestellt. Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
+\teststep{Der Nutzer hat das formatierte \texttt{simpsons.pl}-Programm aus dem Anhang im Editor eingetragen, durch den Parser verarbeiten lassen und die Abfrage \texttt{mother(X, lisa).} gestellt. Der Interpreter ist beim ersten Schritt der Interpretation der gegebenen Abfrage. Eine Visualisierung wird angezeigt.}
 {Der Nutzer betätigt die Fortführen-Schaltfläche.}
-{Die Interpretation wird bis zur Findung einer Lösung fortgeführt. Es wird \enquote{X = marge} ausgegeben. Der Graph entspricht nun dem Graphen bei der Findung der ersten Lösung.}
+{Die Interpretation wird bis zur Findung einer Lösung fortgeführt. Es wird \texttt{X = marge} ausgegeben. Der Graph entspricht nun dem Graphen bei der Findung der ersten Lösung.}
 
-\teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \enquote{X = marge} gefunden wurde.}
+\teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \texttt{X = marge} gefunden wurde.}
 {Der Nutzer hält innerhalb der Visualisierung die linke Maustaste gedrückt und bewegt die Maus nach links.}
 {Der gezeigte Ausschnitt der Visualisierung bewegt sich nach links.}
 
-\teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \enquote{X = marge} gefunden wurde. Die Visualisierung wurde nach links verschoben.}
+\teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \texttt{X = marge} gefunden wurde. Die Visualisierung wurde nach links verschoben.}
 {Der Nutzer betätigt die \enquote{+}-Schaltfläche.}
 {Es wird in den gezeigten Ausschnitt der Visualisierung hineingezoomt.}
 
-\teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \enquote{X = marge} gefunden wurde. Es wurde in die nach links verschobene Visualisierung hineingezoomt.}
+\teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \texttt{X = marge} gefunden wurde. Es wurde in die nach links verschobene Visualisierung hineingezoomt.}
 {Der Nutzer wählt über die Menü-Leiste die Option \enquote{Bild exportieren} aus.}
 {Ein Export-Dialog öffnet sich.}
 
@@ -721,7 +721,7 @@ Das Hauptfenster des Programms kann mit der Maus in der Größe verändert werde
 {Der Nutzer betätigt die Export-Schaltfläche.}
 {Die gesamte Visualisierung wird im ausgewählten Format exportiert.}
 
-\teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \enquote{X = marge} gefunden wurde. Es wurde in die nach links verschobene Visualisierung hineingezoomt. Die Visualisierung wurde bereits als Bild-Datei exporiert.}
+\teststep{Die Visualisierung entspricht dem Zustand, bei dem die Lösung \texttt{X = marge} gefunden wurde. Es wurde in die nach links verschobene Visualisierung hineingezoomt. Die Visualisierung wurde bereits als Bild-Datei exporiert.}
 {Der Nutzer wählt über die Menü-Leiste die Option \enquote{LaTeX exportieren} aus.}
 {Ein Export-Dialog öffnet sich.}
 
@@ -1087,7 +1087,7 @@ Vorgegebener Stil bzgl. der Setzung von Leerzeichen und Umbrüchen. Zu untersche
 \newpage
 \section{Anhang}
 
-\subsection{Formatiertes simpsons.pl Beispielprogramm}
+\subsection{Formatiertes \texttt{simpsons.pl} Beispielprogramm}
 
 \begin{lstlisting}
 father(abe, homer).
@@ -1105,7 +1105,7 @@ parent(X, Y) :-
   father(X, Y).
 \end{lstlisting}
 
-\subsection{Unformatiertes simpsons.pl Beispielprogramm}
+\subsection{Unformatiertes \texttt{simpsons.pl} Beispielprogramm}
 
 \begin{lstlisting}
 father(abe, homer). father(homer, bart).
